...
        android:textColor="@color/white"
        android:background="@color/blue_500"
        android:gravity="center|top"
        android:padding="4dp" />

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/recyclerView"
        app:layout_constraintTop_toBottomOf="@id/header"
        app:layout_constraintBottom_toTopOf="@id/footer"
        app:layout_constraintStart_toStartOf="parent"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:paddingVertical="4dp"
...
